...
            onClick = { pickImageLauncher.launch(arrayOf("image/*")) },
            shape = CircleShape,
            modifier = Modifier
                .align(Alignment.BottomCenter)
                .padding(16.dp)
        ) {
            Icon(Icons.Default.Add, contentDescription = "Add Image")
        }
    }

    if (showNameDialog) {
        AddNameDialog(
            onDismiss = { showNameDialog = false },
...
